--- a/First Year/index.html
+++ b/First Year/index.html
@@ -21,9 +21,9 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a id="logo">First Year Projects</a></h1>
+								<h1><a id="logo">University Projects</a></h1>
 								<hr />
-								<p>A Sub-Website Containing All My First Year Projects</p>
+								<p>A Sub-Website Containing All My Projects developed for university</p>
 							</header>
 						</div>
 
@@ -34,9 +34,12 @@
 								<li>
 									<a>Projects</a>
 									<ul>
+										<li><a href="#FYP">Final Year Project</a></li>
+										<li><a href="#DirectX">DirectX graphics project</a></li>
+										<li><a href="#LowLevel">Optimisation project</a></li>
+										<li><a href="#Group">Group Work Project</a></li>
 										<li><a href="#Mario">Super Mario Bros 3</a></li>
 										<li><a href="#Pacman">Pacman</a></li>
-										<!--<li><a href="#OpenGL">OpenGL Boat Project</a></li> -->
 									</ul>
 								</li>
 							</ul>
@@ -47,6 +50,38 @@
 				<section class="carousel">
 					<div class="reel">
 
+						<article>
+							<a href="#FYP" class="image featured"><img src="images/FYP.png" alt="Final year project demo image" /></a>
+							<header>
+								<h3><a href="#FYP">Final Year Project (Ocean Water)</a></h3>
+							</header>
+							<p>Final Year Research and Development Project</p>
+						</article>
+
+						<article>
+							<a href="#DirectX" class="image featured"><img src="images/DirectX.png" alt="DirectX graphics project" /></a>
+							<header>
+								<h3><a href="#FYP">DirectX Graphics Project</a></h3>
+							</header>
+							<p>Final Year Graphics Project</p>
+						</article>
+						
+						<article>
+							<a href="#LowLevel" class="image featured"><img src="images/LowLevel.png" alt="Cube Optimisation Project image" /></a>
+							<header>
+								<h3><a href="#LowLevel">Optimisation project</a></h3>
+							</header>
+							<p>Cube-collision Optimisation project</p>
+						</article>
+
+						<article>
+							<a href="#Group" class="image featured"><img src="images/Group.png" alt="Cube Optimisation Project image" /></a>
+							<header>
+								<h3><a href="#Group">Group Work Project</a></h3>
+							</header>
+							<p>>Final Year Group Work Project</p>
+						</article>									
+						
 						<article>
 							<a href="#Mario" class="image featured"><img src="images/Super Mario Bros 3 Image.png" alt="Mario Bros 3 Demo Image" /></a>
 							<header>
@@ -75,6 +110,94 @@
 					</div>
 				</section>
 
+				<!-- FYP -->
+				<div id = "FYP" class="wrapper style2">
+
+					<article id="main" class="container special">
+						<a href="" class="image centered"><img src="images/FYP.png" alt="" /></a>
+						<header>
+							<h2><a href="">Final Year Project</a></h2>
+							<p>
+								Todo
+							</p>
+						</header>
+						<p>
+							Todo
+						</p>
+						<footer>
+							<a href="" class="button">Link To Video</a>
+							<a href="https://github.com/BrandonR0berts/WaterArtefact" class="button">Link To Source Code</a>
+						</footer>
+					</article>
+
+				</div>
+
+			<!-- DirectX -->
+				<div id = "DirectX" class="wrapper style2">
+
+					<article id="main" class="container special">
+						<a href="" class="image centered"><img src="images/DirectX.png" alt="" /></a>
+						<header>
+							<h2><a href="">Final Year Graphics Project</a></h2>
+							<p>
+								Todo
+							</p>
+						</header>
+						<p>
+							Todo
+						</p>
+						<footer>
+							<a href="" class="button">Link To Video</a>
+							<a href="" class="button">Link To Source Code</a>
+						</footer>
+					</article>
+
+				</div>
+
+			<!-- Low level -->
+				<div id = "LowLevel" class="wrapper style2">
+
+					<article id="main" class="container special">
+						<a href="" class="image centered"><img src="images/LowLevel.png" alt="" /></a>
+						<header>
+							<h2><a href="">Low Level Optimisation Project</a></h2>
+							<p>
+								Todo
+							</p>
+						</header>
+						<p>
+							Todo
+						</p>
+						<footer>
+							<a href="" class="button">Link To Video</a>
+							<a href="" class="button">Link To Source Code</a>
+						</footer>
+					</article>
+
+				</div>
+
+			<!-- Low level -->
+				<div id = "Group" class="wrapper style2">
+
+					<article id="main" class="container special">
+						<a href="" class="image centered"><img src="images/Group.png" alt="" /></a>
+						<header>
+							<h2><a href="">Group Project</a></h2>
+							<p>
+								Todo
+							</p>
+						</header>
+						<p>
+							Todo
+						</p>
+						<footer>
+							<a href="" class="button">Link To Video</a>
+							<a href="" class="button">Link To Source Code</a>
+						</footer>
+					</article>
+
+				</div>
+			
 			<!-- Mario -->
 				<div id = "Mario" class="wrapper style2">
 
