--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -49,7 +49,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#Forza" class="image featured"><img src="images/Forza.png" alt="" width="300" height="300"/></a>
+							<a href="#Forza" class="image featured"><img src="images/Forza.png" alt=""/></a>
 							<header>
 								<h3><a href"https://playground-games.com/">Forza Horizon 5</a></h3>
 							</header>
@@ -86,7 +86,7 @@
 				<div id = "Forza" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://youtu.be/Crk5be9rgP4" class="image centered"><img src="images/Forza.png" alt="Forza Horizon 5 logo image" /></a>
+						<a href="https://youtu.be/Crk5be9rgP4" class="image centered"><img src="images/Forza.png" alt="Forza Horizon 5 logo image" width="300" height="300"/></a>
 						<header>
 							<h2><a href="https://playground-games.com/">Forza Horizon 5</a></h2>
 							<p>
