--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -86,19 +86,19 @@
 				<div id = "Forza" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="https://youtu.be/Crk5be9rgP4" class="image centered"><img src="images/Forza.png" alt="Forza Horizon 5 logo image" width="300" height="300"/></a>
+						<a href="https://youtu.be/Crk5be9rgP4" class="image centered"><img src="images/Forza.png" alt="Forza Horizon 5 logo image" width="500" height="500"/></a>
 						<header>
 							<h2><a href="https://playground-games.com/">Forza Horizon 5</a></h2>
 							<p>
-								Todo
+								Year long placement working for Playground Games on the Rally DLC for Forza Horizon 5
 							</p>
 						</header>                                                                                                                                                                                                 
 						<p>
 							Todo
 						</p>
 						<footer>
-							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Gameplay Video</a>
-							<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="button">Link To Download Page (Google Play Store)</a>
+							<a href="https://www.youtube.com/watch?v=zpAXUogmc50" class="button">Link To Release Video</a>
+							<a href="https://playground-games.com/" class="button">Link To Playground Games</a>
 						</footer>
 					</article>
 
