--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -185,7 +185,7 @@
 						</p>
 						<footer>
 							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Link To Demo Video</a>
-							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Link To Game Download</a>
+							<a href="https://player-two.itch.io/rise-of-the-spitfire-full-game" class="button">Link To Game Download</a>
 						</footer>
 					</article>
 
