--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -204,9 +204,8 @@
 											<h3>Links To My Socials:</h3>
 										</header>
 										<ul class="icons">
-											<li><a href="https://twitter.com/BrandonRob3rts" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 											<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
-											<li><a href="https://github.com/BrandonMJRoberts" target="_blank" class="icon brands fa-github"><span class="label">Linkedin</span></a></li>
+											<li><a href="https://github.com/BrandonR0berts" target="_blank" class="icon brands fa-github"><span class="label">Linkedin</span></a></li>
 										</ul>
 									</section>
 
