--- a/Game Jams/index.html
+++ b/Game Jams/index.html
@@ -140,7 +140,7 @@
 							The gameplay video link below is of the professionally developed version of the game, not the game jam version.
 						</p>
 						<footer>
-							<a href="https://youtu.be/af4zY-OiqKQ" class="button">Gameplay Video</a>
+							<a href="https://www.youtube.com/watch?v=dQkyFpf4WYk&list=PLuVMIWCJNvnfXGA1iq4GifcBpg0pkE9Oe&index=2" class="button">Gameplay Video</a>
 							<a href="https://player-two.itch.io/rise-of-the-spitfire" class="button">Play On Itch.io</a>
 						</footer>
 					</article>
