--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -94,7 +94,8 @@
 							</p>
 						</header>                                                                                                                                                                                                 
 						<p>
-							Todo
+							During a year long placement for the third year of my uni degree, I worked on developing automation bots for the game Forza Horizon 5. Due to NDAs I cannot detail much about the development time/process. </br>
+							I also worked to fix numerous bugs and crashes within the game, namely an explit which allowed for any car to be brought into any race.
 						</p>
 						<footer>
 							<a href="https://www.youtube.com/watch?v=zpAXUogmc50" class="button">Link To Release Video</a>
