--- a/First Year/index.html
+++ b/First Year/index.html
@@ -59,7 +59,7 @@
 						</article>
 
 						<article>
-							<a href="#DirectX" class="image featured"><img src="images/DirectX.png" alt="DirectX graphics project" /></a>
+							<a href="#DirectX" class="image featured"><img src="images/DX11Image.png" alt="DirectX graphics project" /></a>
 							<header>
 								<h3><a href="#FYP">DirectX Graphics Project</a></h3>
 							</header>
@@ -136,7 +136,7 @@
 				<div id = "DirectX" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/DirectX.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/DX11Image.png" alt="" /></a>
 						<header>
 							<h2><a href="">Final Year Graphics Project</a></h2>
 							<p>
