--- a/First Year/index.html
+++ b/First Year/index.html
@@ -136,7 +136,7 @@
 				<div id = "DirectX" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/DX11Image.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/DX11Image.png" alt="" width="300" height="300" /></a>
 						<header>
 							<h2><a href="">Final Year Graphics Project</a></h2>
 							<p>
