--- a/First Year/index.html
+++ b/First Year/index.html
@@ -67,7 +67,7 @@
 						</article>
 						
 						<article>
-							<a href="#LowLevel" class="image featured"><img src="images/LowLevel.png" alt="Cube Optimisation Project image" /></a>
+							<a href="#LowLevel" class="image featured"><img src="images/Physics.png" alt="Cube Optimisation Project image" /></a>
 							<header>
 								<h3><a href="#LowLevel">Optimisation project</a></h3>
 							</header>
@@ -158,7 +158,7 @@
 				<div id = "LowLevel" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/LowLevel.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/Physics.png" alt="" width = "300" height = "300"/></a>
 						<header>
 							<h2><a href="">Low Level Optimisation Project</a></h2>
 							<p>
