--- a/First Year/index.html
+++ b/First Year/index.html
@@ -51,7 +51,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#FYP" class="image featured"><img src="images/FYP.png" alt="Final year project demo image" /></a>
+							<a href="#FYP" class="image featured"><img src="images/Water.png" alt="Final year project demo image" /></a>
 							<header>
 								<h3><a href="#FYP">Final Year Project (Ocean Water)</a></h3>
 							</header>
@@ -96,17 +96,7 @@
 								<h3><a href="#Pacman">Pacman</a></h3>
 							</header>
 							<p>First Game Project For University.</p>
-						</article>
-						
-						<!--
-						<article>
-							<a href="#OpenGL" class="image featured"><img src="images/pic01.jpg" alt="OpenGL Boat Project Image" /></a>
-							<header>
-								<h3><a href="#OpenGL">OpenGL Boat Project</a></h3>
-							</header>
-							<p>First Game Project Developed In OpenGL.</p>
-						</article> -->
-
+						</article>				
 					</div>
 				</section>
 
@@ -114,7 +104,7 @@
 				<div id = "FYP" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/FYP.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/Water.png" alt="" width = "300" height = "300"/></a>
 						<header>
 							<h2><a href="">Final Year Project</a></h2>
 							<p>
