--- a/First Year/index.html
+++ b/First Year/index.html
@@ -51,7 +51,7 @@
 					<div class="reel">
 
 						<article>
-							<a href="#FYP" class="image featured"><img src="images/Water.png" alt="Final year project demo image" /></a>
+							<a href="#FYP" class="image featured"><img src="images/Water.PNG" alt="Final year project demo image" /></a>
 							<header>
 								<h3><a href="#FYP">Final Year Project (Ocean Water)</a></h3>
 							</header>
@@ -104,7 +104,7 @@
 				<div id = "FYP" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/Water.png" alt="" width = "300" height = "300"/></a>
+						<a href="" class="image centered"><img src="images/Water.PNG" alt="" width = "300" height = "300"/></a>
 						<header>
 							<h2><a href="">Final Year Project</a></h2>
 							<p>
