--- a/First Year/index.html
+++ b/First Year/index.html
@@ -75,7 +75,7 @@
 						</article>
 
 						<article>
-							<a href="#Group" class="image featured"><img src="images/Group.png" alt="Cube Optimisation Project image" /></a>
+							<a href="#Group" class="image featured"><img src="images/GroupWork.png" alt="Cube Optimisation Project image" /></a>
 							<header>
 								<h3><a href="#Group">Group Work Project</a></h3>
 							</header>
@@ -170,7 +170,7 @@
 				<div id = "Group" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/Group.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/GroupWork.png" alt="" /></a>
 						<header>
 							<h2><a href="">Group Project</a></h2>
 							<p>
