--- a/First Year/index.html
+++ b/First Year/index.html
@@ -170,7 +170,7 @@
 				<div id = "Group" class="wrapper style2">
 
 					<article id="main" class="container special">
-						<a href="" class="image centered"><img src="images/GroupWork.png" alt="" /></a>
+						<a href="" class="image centered"><img src="images/GroupWork.png" alt="" width = "300" height="300" /></a>
 						<header>
 							<h2><a href="">Group Project</a></h2>
 							<p>
