--- a/First Year/index.html
+++ b/First Year/index.html
@@ -174,11 +174,14 @@
 						<header>
 							<h2><a href="">Group Project</a></h2>
 							<p>
-								Todo
+								Final Year Group engine Creation Project
 							</p>
 						</header>
 						<p>
-							Todo
+							For the final module in my games programming degree I worked with a group of other students, all under the supervision of an industry mentor, to create a 2D game engine from scratch. </br>
+							My role within the team was to create and manage the rendering side of the engine, incorporating any changes to the level format and effects that were to be made. What I ended up developing for the project was an instanced 2D rendering framework built using OpenGL 4.3.
+							On top of the rendering portion of the engine I added an internal event triggering system, input handling, memory management, particle systems, screenshots, shadowing, and basic UI functionality. </br>
+							The final product we produced was an engine in which you could easily make a 2D level based game, with multiple layers and effects with ease.
 						</p>
 						<footer>
 							<a href="" class="button">Link To Video</a>
