--- a/First Year/index.html
+++ b/First Year/index.html
@@ -108,11 +108,14 @@
 						<header>
 							<h2><a href="">Final Year Project</a></h2>
 							<p>
-								Todo
+								An Invesigation into Simulating Large Bodies of Water in Computer Games 
 							</p>
 						</header>
 						<p>
-							Todo
+							Part of my final year we were assigned the task of completing a dissertation with practical artefact portion. This disseration needed to be heavily researched and justified through academic literature, as well as through practical evidience from the games industry. </br>
+							The area I decided to research into was the realm of realistic water simulation, originally aiming for both surface modelling and rendering, however each area was large enough to justify its own dissertation, so I decided to focus on just surface modelling. </br>
+							After devling into many academic papers and professional talks, through platforms such as SIIGRAPH and GDC, I came across a paper by Jerry Tessendorf detailing how to efficiently simulate realisic ocean waves using inverse FFT calculations. This is also the approach that Sea of Thieves uses for their water siulation. </br>
+							Expanding from this literature collection I began work on an artefact which aimed to replicate the Tessendorf approach, as well as two simpler, less expensive approahces to simulating water - these being summing sine waves, and Gerstner waves. The artefact is avaliable on my github through the link below.
 						</p>
 						<footer>
 							<a href="" class="button">Link To Video</a>
