--- a/First Year/index.html
+++ b/First Year/index.html
@@ -133,11 +133,12 @@
 						<header>
 							<h2><a href="">Final Year Graphics Project</a></h2>
 							<p>
-								Todo
+								DirectX-11 graphics module
 							</p>
 						</header>
 						<p>
-							Todo
+							As my final graphics module of the degree we were tasked with choosing a graphics API, I chose DirectX-11 due to not being overly familar with it, and implementing a number of pre-determined graphics features. These features included, normal mapping, deferred rendering, terrain generation, depth of field blur, screen wide colour tinting, anti-aliasing, and model rendering. </br>
+							For the module I ended up completing most of the features requested, creating the project linked to in the buttons below.
 						</p>
 						<footer>
 							<a href="" class="button">Link To Video</a>
@@ -155,11 +156,12 @@
 						<header>
 							<h2><a href="">Low Level Optimisation Project</a></h2>
 							<p>
-								Todo
+								Low Level C++ Optimisation Project 
 							</p>
 						</header>
 						<p>
-							Todo
+							For this module we were given a basic cube-cube collision detection program that simulated the physics of a number of cubes in a scene. The task for the module was to optimise the code through adding memory management, threading, and spacial locality (quadtrees). And, as a seperate part to the project we were also tasked with porting our optimised code to the playstation 4. </br>
+							As a result of this project I ended up optimising the code to run on average around 99% faster than the baseline code provided. This was all done without resorting to using compute shaders, as using them would have defeated the point of the module.
 						</p>
 						<footer>
 							<a href="" class="button">Link To Video</a>
