--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
 								<p>
 									Welcome to my portfolio! 
 								</br> 
-									As a recent TIGA graduate of the year 2024 (programming) accolade winner, and shortlisted member for 'Outstanding TIGA graduate of the year 2024', I am a computer games programmer who has just finished studying a computer games programming degree at Staffordshire University, achieving a First Class degree. </br> 
-						                        This website is to act as a container for the best projects I have developed in each subsection of my career so far. 
-						Each section is split into a seperate website which details the main projects developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
+									With 8+ years of C++ programming experience, three shipped titles, a first class games programming degree, I am a TIGA graduate of the year (2024) who is fully invested in graphics and engine programming. And am currently striving to create my own unique game engine.</br> 
+									Each section of this website is split into subsections which detail the projects I have developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
 									Clicking / tapping on any of the icons below takes you to that sub area's website.</br>				
 								</p>
 							</header>
@@ -142,7 +141,7 @@
 					</section>
 
 				<!-- About Me -->
-					<section id="about" class="three">
+					<!--<section id="about" class="three">
 						<div class="container">
 
 							<header>
@@ -155,7 +154,7 @@
 							</p>
 
 						</div>
-					</section>
+					</section>-->
 			</div>
 
 		<!-- Footer -->
