--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 								<p>
 									Welcome to my portfolio! 
 								</br> 
-									With 8+ years of C++ programming experience, three shipped titles, a first class games programming degree, I am a TIGA graduate of the year (2024) who is fully invested in graphics and engine programming. And am currently striving to create my own unique game engine.</br> 
-									Each section of this website is split into subsections which detail the projects I have developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br>
+									With 8+ years of C++ programming experience, three shipped titles, and a first class games programming degree, I am a TIGA graduate of the year (2024) who is fully invested in graphics and engine programming. And who is currently striving to create my own unique game engine.</br></br> 
+									Each section of this website is split into subsections which detail the projects I have developed in that area, along with links to either a demo video of the game playing, or a download page for the game.</br></br>
 									Clicking / tapping on any of the icons below takes you to that sub area's website.</br>				
 								</p>
 							</header>
