--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<!-- Social Icons -->
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/brandon-m-j-roberts/" target = "_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href=https://github.com/BrandonR0berts" target = "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href=https://github.com/BrandonR0berts target = "_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://player-two.itch.io/" target = "_blank" class="icon brands fa-itch-io"><span class="label">itch.io</span></a></li>
 						</ul>
 
