--- a/First Year/index.html
+++ b/First Year/index.html
@@ -53,33 +53,33 @@
 						<article>
 							<a href="#FYP" class="image featured"><img src="images/Water.PNG" alt="Final year project demo image" /></a>
 							<header>
-								<h3><a href="#FYP">Final Year Project (Ocean Water)</a></h3>
+								<h3><a href="#FYP">Final Year Project</a></h3>
 							</header>
-							<p>Final Year Research and Development Project</p>
+							<p>Ocean Water Simulation Research</p>
 						</article>
 
 						<article>
 							<a href="#DirectX" class="image featured"><img src="images/DX11Image.png" alt="DirectX graphics project" /></a>
 							<header>
-								<h3><a href="#FYP">DirectX Graphics Project</a></h3>
+								<h3><a href="#FYP">DirectX 11</a></h3>
 							</header>
-							<p>Final Year Graphics Project</p>
+							<p>Varied DirectX Graphics Project</p>
 						</article>
 						
 						<article>
 							<a href="#LowLevel" class="image featured"><img src="images/Physics.png" alt="Cube Optimisation Project image" /></a>
 							<header>
-								<h3><a href="#LowLevel">Optimisation project</a></h3>
+								<h3><a href="#LowLevel">PS4 Optimisation Project</a></h3>
 							</header>
-							<p>Cube-collision Optimisation project</p>
+							<p>PS4 Based Cube-Collision Optimisation project</p>
 						</article>
 
 						<article>
 							<a href="#Group" class="image featured"><img src="images/GroupWork.png" alt="Cube Optimisation Project image" /></a>
 							<header>
-								<h3><a href="#Group">Group Work Project</a></h3>
+								<h3><a href="#Group">Game Development Project</a></h3>
 							</header>
-							<p>>Final Year Group Work Project</p>
+							<p>Final Year Group Game</p>
 						</article>									
 						
 						<article>
@@ -95,7 +95,7 @@
 							<header>
 								<h3><a href="#Pacman">Pacman</a></h3>
 							</header>
-							<p>First Game Project For University.</p>
+							<p>Pacman Game Recreation</p>
 						</article>				
 					</div>
 				</section>
