--- a/Professional Work/index.html
+++ b/Professional Work/index.html
@@ -129,7 +129,6 @@
 						</p>
 						<footer>
 							<a href="https://youtu.be/Crk5be9rgP4" class="button">Link To Gameplay Video</a>
-							<a href="https://play.google.com/store/apps/details?id=com.petern.lostmarbles&hl=en_GB&gl=US" class="button">Link To Download Page (Google Play Store)</a>
 						</footer>
 					</article>
 
@@ -143,7 +142,7 @@
 						<header>
 							<h2><a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US">Rituals: Book Of Skog</a></h2>
 							<p>
-								My second professionally developed game. Developed immediatly after Lost My Marbles, during my time working for Curioso Games in 2019.
+								My second professionally developed game. Developed during my time working for Curioso Games in 2019.
 							</p>
 						</header>
 						<p>
@@ -155,7 +154,6 @@
 							
 						</p>
 						<footer>
-							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Gameplay Video</a>
 							<a href="https://play.google.com/store/apps/details?id=com.Curioso.RitualsMatch3&hl=en_GB&gl=US" class="button">Link To Download Page (Google Play Store)</a>
 						</footer>
 					</article>
